# adventofcode2021

./: .gitignore  README.md
day/: README.md
day01/: CHANGELOG.md  PUZZLE.md  README.md  day01.cabal  solution.csx
day01/app/: Main.hs
day01/test/: test.hs
day02/: PUZZLE.md  README.md  day02.cabal  solution.csx
day02/app/: Main.hs
day03/: PUZZLE.md  README.md  solution.csx
day04/: ListExtensions.cs  PUZZLE.md  README.md  solution.csx
day05/: PUZZLE.md  README.md  s2.csx  solution.csx
day06/: PUZZLE.md  README.md  solution.csx
day07/: PUZZLE.md  README.md  solution.csx
day08/: PUZZLE.md  README.md  s2.csx  solution.csx  workings.txt
day09/: PUZZLE.md  README.md  solution.csx
day10/: PUZZLE.md  README.md  solution.csx
day11/: PUZZLE.md  README.md  input-sample-simple-workings.txt  solution.csx
day12/: PUZZLE.md  README.md  solution.csx
day13/: PUZZLE.md  README.md  solution.csx
day14/: PUZZLE.md  README.md  solution.csx
day15/: PUZZLE.md  README.md  solution.csx
day16/: PUZZLE.md  README.md  input-sample.txt  solution.csx
day17/: PUZZLE.md  README.md
day18/: PUZZLE.md  README.md  solution.csx
day19/: PUZZLE.md  README.md  solution.csx
day20/: PUZZLE.md  README.md  solution.csx
day21/: PUZZLE.md  README.md  solution.csx
day22/: PUZZLE.md  README.md  solution-workings.csx  solution.csx  sw2.csx
day23/: PUZZLE.md  README.md  solution.csx
day24/: PUZZLE.md  README.md  solution.csx
day25/: PUZZLE.md  README.md  solution.csx
