cabal-version:      2.4
name:               day01
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alex Hedley
maintainer:         alexhedley@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable adventofcode2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, split
    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
                        .
    default-language:    Haskell2010
    main-is:             test.hs
    other-modules:       
    build-depends:       base >=4.14 && <4.15, HUnit